deploy: do catch non-HTTPS links to git-scm.com
After merging https://github.com/git/git-scm.com/pull/1953, as per
https://github.com/git/git-scm.com/actions/runs/13539600621/job/37837557415#step:3:135167
the `deploy` workflow failed.

This issue should have been found in a PR build, but was not. Let's make
sure that similar issues will be found early in the future, before
merging the respective PR.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -141,7 +141,10 @@ runs:
       # A simple `grep` should work without any false positives,
       # unless git-scm.com mentions the base URL of one of its forks,
       # which is unlikely.
-      run: '! grep -FInr "http:${base_url#https:}" public'
+      #
+      # To catch bugs early, let's always look for non-HTTPS links
+      # to git-scm.com.
+      run: '! grep -FInre "http://git-scm.com" -e "http:${base_url#https:}" public'
 
     - name: check for broken links
       id: lychee
