--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -176,8 +176,7 @@ runs:
         fail: false
         failIfEmpty: false # needed because its default overrides `fail = false`
 
-    - name: ${{ env.lychee_exit_code != '0' && 'open or update' || 'maybe close' }} link checker issue
-      if: env.lychee_exit_code != ''
+    - name: ${{ steps.lychee.outputs.exit_code != '0' && 'open or update' || 'maybe close' }} link checker issue
       uses: actions/github-script@v7
       with:
         github-token: ${{ inputs.github-token }}
@@ -211,13 +210,13 @@ runs:
           })()
 
           if (issues.data.items.length === 0) {
-            if (process.env.lychee_exit_code !== '0') {
+            if ('${{ steps.lychee.outputs.exit_code }}' !== '0') {
               await github.rest.issues.create({ ...req, title: 'Link Checker Report', body, labels: ['linkchecker'] })
             }
           } else {
             req.issue_number = issues.data.items[0].number
             await github.rest.issues.createComment({ ...req, body })
-            if (process.env.lychee_exit_code === '0') {
+            if ('${{ steps.lychee.outputs.exit_code }}' === '0') {
               await github.rest.issues.update({ ...req, state: 'closed' })
             }
           }
