--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -131,12 +131,12 @@ runs:
       shell: bash
       run: |
         echo "result=$(echo "$base_url" |
-          sed 's|^\(.*\)\(/git-scm\.com\)$|(\1)?\2(.*)|') file://$PWD/public\$2" \
+          sed 's|^\(.*\)\(/git-scm\.com\)$|^(\1)?\2(.*)|') file://$PWD/public\$2" \
           >>$GITHUB_OUTPUT
         # When running in forks, do detect when links try to break out of the
         # `/git-scm.com/` subdirectory
         echo "remap-dotdot=$(echo "$base_url" |
-          sed -n 's|^\(https\?:\/\/.*\)\(/git-scm\.com\)$|--remap '\''(\1.*) file://../$1'\''|p')" \
+          sed -n 's|^\(https\?:\/\/.*\)\(/git-scm\.com\)$|--remap '\''^(\1.*) file://../$1'\''|p')" \
           >>$GITHUB_OUTPUT
 
     - name: check for downgrades to unencrypted HTTP
