ci(update-book): add back the download links for the non-English versions
In the transition to the Hugo world, these download links were lost.

By using the just-introduced feature where `script/update-book2.rb` can
work on a clone of the (potentially translated) ProGit book but also
discover dynamically in what format the book can be downloaded (if any),
we can add those back.

This closes https://github.com/git/git-scm.com/issues/1963.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/update-book.yml
+++ b/.github/workflows/update-book.yml
@@ -71,6 +71,8 @@ jobs:
         with:
           bundler-cache: true
       - name: update book/${{ matrix.language.lang }}
+        env:
+          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # this seems to be needed to let `bundle exec` see `vendor/bundle/`
           { bundle check || bundle install --frozen; } &&
