ci(update-book): allow for unchanged translations when forcing a rebuild
When forcing a full rebuild, it is possible that some translations do
not result in any change. Allow for that _specifically_ when
force-rebuilding, but not otherwise (where it would be a bug if there
was no change, as at least the head commit will be changed).

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/update-book.yml
+++ b/.github/workflows/update-book.yml
@@ -87,6 +87,13 @@ jobs:
 
           # commit it all
           git add -A external/book &&
+          if ${{ inputs.force-rebuild == true && 'git diff-index --exit-code HEAD --' || 'false' }}
+          then
+            # Force the bundle to be non-empty
+            git fetch --depth 2 origin ${{ github.ref_name }} &&
+            git update-ref refs/remotes/origin/${{ github.ref_name }} HEAD^ &&
+            exit 0
+          fi &&
           git -c user.name=${{ github.actor }} \
             -c user.email=${{ github.actor }}@noreply.github.com \
             commit -m 'book: update ${{ matrix.language.lang }}' \
