Update git-klient to kommit
The KDE SDK project changed the name of the software

--- a/data/guis/kommit.yml
+++ b/data/guis/kommit.yml
@@ -1,6 +1,6 @@
 ---
-name: "Git Klient"
-project_url: "https://invent.kde.org/sdk/gitklient"
+name: "Kommit"
+project_url: "https://invent.kde.org/sdk/kommit"
 image_tag: "images/guis/gitklient@2x.png"
 platforms:
   - "Linux"
