GUI: giggle is not longer in active development
The website points to https://gitlab.gnome.org/Archive/giggle, which is marked as "archived" ; [latest tag 0.7 is 12 years old](https://gitlab.gnome.org/Archive/giggle/-/tags) now.

--- a/data/guis/giggle.yml
+++ b/data/guis/giggle.yml
@@ -1,5 +1,5 @@
 ---
-name: "giggle"
+name: "giggle (no longer under active development)"
 project_url: "https://wiki.gnome.org/Apps/giggle/"
 image_tag: "images/guis/giggle@2x.png"
 platforms:
